// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Upload messageFile demo works fine 1`] = `
<messageFile>
  <wx-view
    class="wrapper"
  >
    <t-upload
      config="{{
        Object {
          "count": 1,
        }
      }}"
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload1.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      source="messageFile"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</messageFile>
`;

exports[`Upload Upload multiple demo works fine 1`] = `
<multiple>
  <wx-view
    class="wrapper"
  >
    <t-upload
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload1.png",
          },
          Object {
            "name": "uploaded2.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload3.png",
          },
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload4.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:click="handleClick"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</multiple>
`;

exports[`Upload Upload single demo works fine 1`] = `
<single>
  <wx-view
    class="wrapper"
  >
    <t-upload
      files="{{Array []}}"
      max="{{1}}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:add="handleAdd"
      bind:remove="handleRemove"
    />
  </wx-view>
</single>
`;

exports[`Upload Upload status demo works fine 1`] = `
<status>
  <wx-view
    class="wrapper"
  >
    <t-upload
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "status": "loading",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload1.png",
          },
          Object {
            "name": "uploaded2.png",
            "percent": 68,
            "status": "loading",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload2.png",
          },
          Object {
            "name": "uploaded3.png",
            "status": "reload",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload3.png",
          },
          Object {
            "name": "uploaded4.png",
            "status": "failed",
            "type": "image",
            "url": "https://tdesign.gtimg.com/miniprogram/images/upload4.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:click="handleClick"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</status>
`;
